--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "author": "Mach1nka",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.4",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
   },
@@ -34,8 +40,10 @@
   },
   "devDependencies": {
     "@types/node": "^18.7.16",
+    "@types/prop-types": "^15.7.5",
     "@types/react": "^18.0.19",
     "@types/react-dom": "^18.0.6",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
     "eslint": "latest",
