fix: manifest name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "PDF Convertor",
-  "name": "PDF Convertor",
+  "short_name": "Docstock",
+  "name": "Docstock",
   "icons": [
     {
       "src": "favicon.ico",
